--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   background-color: grey;
   font-family: Helvetica, Arial, sans-serif;
   line-height: 1.6;
+  width:790px;
 }
 
 #wholeShebang {
@@ -68,6 +69,7 @@ section {
 
 table {
   border-collapse: collapse;
+  width:100%;
 }
 
 th {
